MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Egypt_Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Current_Date__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date</label>
    <type>Date</type>
</CustomField>