MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Egypt_Current_Day__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Current_Day__c</fullName>
    <formula>CASE(
    WEEKDAY(TODAY()),
    1, &quot;Sunday&quot;,
    2, &quot;Monday&quot;,
    3, &quot;Tuesday&quot;,
    4, &quot;Wednesday&quot;,
    5, &quot;Thursday&quot;,
    6, &quot;Friday&quot;,
    7, &quot;Saturday&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Day</label>
    <type>Text</type>
</CustomField>