MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Egypt_Current_Day_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Current_Day_Arabic__c</fullName>
    <formula>CASE(
    WEEKDAY(TODAY()),
    1, &quot;الأحد&quot;,
    2, &quot;الاثنين&quot;,
    3, &quot;الثلاثاء&quot;,
    4, &quot;الأربعاء&quot;,
    5, &quot;الخميس&quot;,
    6, &quot;الجمعة&quot;,
    7, &quot;السبت&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Day Arabic</label>
    <type>Text</type>
</CustomField>