MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Egypt_Flexible_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Flexible_Payment_Plan__c</fullName>
    <description>This field is used to capture the Flexible Payment Plan Name, it will only be used when SO is created with Flexible Plan only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flexible Payment Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>