MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptChequeReceiptTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>EgyptChequeReceiptTotalAmount__c</fullName>
    <description>This field rolls up sum of all receipts Cheque mode of payments.</description>
    <label>Cheque Receipt Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>