MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptChequeReceiptTotalAmountInWords__c.field-meta.xml
<CustomField>
    <fullName>EgyptChequeReceiptTotalAmountInWords__c</fullName>
    <description>This field will store the text form of Checue Receipt Total Amount field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Receipt Total Amount in Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>