MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>EgyptTotalAmount__c</fullName>
    <inlineHelpText>The total value of the sale — Total Installment Amount plus Total Maintenance Amount. This is the full amount the customer will pay across the life of the plan.</inlineHelpText>
    <label>Total Amount</label>
    <summarizedField>SalesOrderInstallments__c.Total_Installment_Price__c</summarizedField>
    <summaryForeignKey>SalesOrderInstallments__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>