MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptTotalAmountInWords__c.field-meta.xml
<CustomField>
    <fullName>EgyptTotalAmountInWords__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Amount in Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>