MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptTotalInstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>EgyptTotalInstallmentAmount__c</fullName>
    <inlineHelpText>The total amount payable by the customer against the unit under the selected payment plan, excluding maintenance. This is the sum of all scheduled installments (reservation, downpayment and subsequent installments) and is the value invoiced to the customer.</inlineHelpText>
    <label>Total Installment Amount</label>
    <summarizedField>SalesOrderInstallments__c.InstallmentAmount__c</summarizedField>
    <summaryForeignKey>SalesOrderInstallments__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>