MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptTotalInstallmentAmountInWords__c.field-meta.xml
<CustomField>
    <fullName>EgyptTotalInstallmentAmountInWords__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Installment Amount in Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>