MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptTotalInstallmentAmountInWordsArabic__c.field-meta.xml
<CustomField>
    <fullName>EgyptTotalInstallmentAmountInWordsArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Installment Amount in Words Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>