MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptTotalMaintenanceAmount__c.field-meta.xml
<CustomField>
    <fullName>EgyptTotalMaintenanceAmount__c</fullName>
    <inlineHelpText>The total maintenance fee payable for the unit, collected separately from the unit price over the maintenance collection period.</inlineHelpText>
    <label>Total Maintenance Amount</label>
    <summarizedField>SalesOrderInstallments__c.Maintenance_Fee__c</summarizedField>
    <summaryForeignKey>SalesOrderInstallments__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>