MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptTotalMaintenanceAmountInWordsArabic__c.field-meta.xml
<CustomField>
    <fullName>EgyptTotalMaintenanceAmountInWordsArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Maintenance Amount in Words Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>