MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EgyptUnitSellingPriceInWords__c.field-meta.xml
<CustomField>
    <fullName>EgyptUnitSellingPriceInWords__c</fullName>
    <description>English translation of the field Unit Selling Price.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Selling Price In Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>