MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EIDofPurchasersRepresentative__c.field-meta.xml
<CustomField>
    <fullName>EIDofPurchasersRepresentative__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EID of Purchaser’s Representative</label>
    <length>25</length>
    <type>Text</type>
</CustomField>