MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/EligibletoCreateCommissionLine__c.field-meta.xml
<CustomField>
    <fullName>EligibletoCreateCommissionLine__c</fullName>
    <formula>IF(ISPICKVAL( SPAStatus__c,&apos;SPA Signed By Customer&apos;),(VALUE($Label.CommissionLineWillCreateAfter) +  Booking_Date__c) &lt;=  TODAY() ,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EligibletoCreateCommissionLine</label>
    <type>Checkbox</type>
</CustomField>