MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Email_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Email_Reminder__c</fullName>
    <label>Email Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downpayment Reminder</fullName>
            </value>
            <value>
                <fullName>Second Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Third Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Email Reminder ADM</fullName>
            </value>
            <value>
                <fullName>Send Construction Communication</fullName>
            </value>
            <value>
                <fullName>Fifth Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Modon Customer Activation</fullName>
            </value>
            <value>
                <fullName>Fifth Instalment Reminder Reem</fullName>
            </value>
            <value>
                <fullName>Fifth Instalment Reminder Ignore</fullName>
            </value>
            <value>
                <fullName>Modon Appreciation Communication</fullName>
            </value>
            <value>
                <fullName>Aug Send Construction Communication</fullName>
            </value>
            <value>
                <fullName>Reem Hills Sixth Payment Reminder</fullName>
            </value>
            <value>
                <fullName>Nawayef West Construction Communication</fullName>
            </value>
            <value>
                <fullName>Nawayef East Construction Communication</fullName>
            </value>
            <value>
                <fullName>Nawayef West New Payment Email</fullName>
            </value>
            <value>
                <fullName>Reem Hills Third Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Reem Hills New Payment Email</fullName>
            </value>
            <value>
                <fullName>Fourth Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Nawayef West Payment Reminder2</fullName>
            </value>
            <value>
                <fullName>NVT Update ADM</fullName>
            </value>
            <value>
                <fullName>No Cheque Available Email Reminder</fullName>
            </value>
            <value>
                <fullName>Test Fourth Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>Email Reminder Past Dated Cheque</fullName>
            </value>
            <value>
                <fullName>Muheira Milestone Date Updates</fullName>
            </value>
            <value>
                <fullName>Payment Revised Email</fullName>
            </value>
            <value>
                <fullName>Fourth Instalment Reminder Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Fourth Instalment Postponed Reminder</fullName>
            </value>
            <value>
                <fullName>Eid Al Adha</fullName>
                <isActive>false</isActive>
                <label>Eid Al Adha</label>
            </value>
            <value>
                <fullName>Wadeem Appreciation Communication</fullName>
                <isActive>false</isActive>
                <label>Wadeem Appreciation Communication</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>