MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ExactBookingDate_Egypt__c.field-meta.xml
<CustomField>
    <fullName>ExactBookingDate_Egypt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exact Booking Date</label>
    <type>Date</type>
</CustomField>