MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ExcludeADMCheck__c.field-meta.xml
<CustomField>
    <fullName>ExcludeADMCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude ADM Check</label>
    <type>Checkbox</type>
</CustomField>