MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ExcludePDCCheck__c.field-meta.xml
<CustomField>
    <fullName>ExcludePDCCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude PDC Check</label>
    <type>Checkbox</type>
</CustomField>