MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ExpressionofInterest__c.field-meta.xml
<CustomField>
    <fullName>ExpressionofInterest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expression of Interest</label>
    <referenceTo>Expressionofinterest__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>