MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/External_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>External_Commission_Amount__c</fullName>
    <label>External Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>