MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ExternalCommissionPaidPercent__c.field-meta.xml
<CustomField>
    <fullName>ExternalCommissionPaidPercent__c</fullName>
    <label>ExternalCommissionPaidPercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>