MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/FacadeStyle__c.field-meta.xml
<CustomField>
    <fullName>FacadeStyle__c</fullName>
    <label>Facade Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>South California</fullName>
            </value>
            <value>
                <fullName>Contemporary</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>Arabian</fullName>
            </value>
            <value>
                <fullName>Modern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>