MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Finance_Associate__c.field-meta.xml
<CustomField>
    <fullName>Finance_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>