MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Finance_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Finance_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Finance Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>