MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/FloorPlanPublicURL__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanPublicURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FloorPlanPublicURL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>