MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/FormulaAccountName__c.field-meta.xml
<CustomField>
    <fullName>FormulaAccountName__c</fullName>
    <formula>CustomerAccount__r.FirstName + &apos; &apos; + CustomerAccount__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Account Name</label>
    <type>Text</type>
</CustomField>