MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/FormulaEID__c.field-meta.xml
<CustomField>
    <fullName>FormulaEID__c</fullName>
    <formula>CustomerAccount__r.PersonContact.EIDNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula EID</label>
    <type>Text</type>
</CustomField>