MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/FormulaEmail__c.field-meta.xml
<CustomField>
    <fullName>FormulaEmail__c</fullName>
    <formula>PrimaryContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Email</label>
    <type>Text</type>
</CustomField>