MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/FormulaMobile__c.field-meta.xml
<CustomField>
    <fullName>FormulaMobile__c</fullName>
    <formula>CustomerAccount__r.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Mobile</label>
    <type>Text</type>
</CustomField>