MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Future_Collections_Amount__c.field-meta.xml
<CustomField>
    <fullName>Future_Collections_Amount__c</fullName>
    <label>Future Collections Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>