MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/FxRate_EGP_AED__c.field-meta.xml
<CustomField>
    <fullName>FxRate_EGP_AED__c</fullName>
    <label>Fx Rate (EGP to AED)</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>