MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/HandedOverDate__c.field-meta.xml
<CustomField>
    <fullName>HandedOverDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handed Over Date</label>
    <type>Date</type>
</CustomField>