MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Has_Override_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Has_Override_Buyer__c</fullName>
    <description>This field is being used in Docu Sign Egypt reservation form template.</description>
    <formula>IF((NOT(ISBLANK(Override_Buyer__c)) &amp;&amp; CustomerAccount__r.IsPersonAccount = true), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Override Buyer</label>
    <type>Checkbox</type>
</CustomField>