MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Has_UAEDDS__c.field-meta.xml
<CustomField>
    <fullName>Has_UAEDDS__c</fullName>
    <formula>VirtualAccount__r.EscrowAccount__r.Has_UAEDDS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has UAEDDS</label>
    <type>Checkbox</type>
</CustomField>