MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/HistoricalFlow__c.field-meta.xml
<CustomField>
    <fullName>HistoricalFlow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HistoricalFlow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>