MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Image_Name_pc__c.field-meta.xml
<CustomField>
    <fullName>Image_Name_pc__c</fullName>
    <formula>If((UnitOption__c != null &amp;&amp;  UnitOption__r.SubCategory__c != null),Unit__r.Phase__r.Project__r.Name+&quot;-&quot;+UnitOption__r.SubCategory__c+&quot;-&quot;+ RIGHT( UnitOption__r.Name , 6),IF(UnitOption__c != null &amp;&amp;  UnitOption__r.SubCategory__c = null,Unit__r.Phase__r.Project__r.Name+&quot;-&quot;+ RIGHT( UnitOption__r.Name , 6),If(TEXT(FacadeStyle__c) = null,
Unit__r.Phase__r.Project__r.Name,Unit__r.Phase__r.Project__r.Name+&quot;-&quot;+TEXT(FacadeStyle__c))))</formula>
    <label>Image Name pc</label>
    <type>Text</type>
</CustomField>