MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Indirect_Commission_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Commission_Amount_Paid__c</fullName>
    <label>Indirect Commission Amount - Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>