MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Indirect_Commission_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Commission_Amount_Pending__c</fullName>
    <label>Indirect Commission Amount - Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>