MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/InDirect_SurveyLink__c.field-meta.xml
<CustomField>
    <fullName>InDirect_SurveyLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InDirect SurveyLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>