MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_Cancelled_SR__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled_SR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled SR?</label>
    <type>Checkbox</type>
</CustomField>