MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_Cancelled_Unit__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled Unit?</label>
    <type>Checkbox</type>
</CustomField>