MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_Downpayment_Collected_Modon_Egypt__c.field-meta.xml
<CustomField>
    <fullName>Is_Downpayment_Collected_Modon_Egypt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Downpayment Collected (Modon-Egypt)</label>
    <type>Checkbox</type>
</CustomField>