MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_Employee_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_Employee_Payment_Plan__c</fullName>
    <formula>PaymentPlan__r.Is_Employee_Payment_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Employee Payment Plan</label>
    <type>Checkbox</type>
</CustomField>