MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_Only_Dari_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Is_Only_Dari_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Only_Dari_Fee_Waived</label>
    <type>Checkbox</type>
</CustomField>