MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_Property_Transfer_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Is_Property_Transfer_In_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Is Property Transfer In Progress</label>
    <referenceTo>ServiceRequest__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>SOSR</relationshipName>
    <type>Lookup</type>
</CustomField>