MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_Refund__c.field-meta.xml
<CustomField>
    <fullName>Is_Refund__c</fullName>
    <label>Is Refund?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>