MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_Reservation_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Reservation_Form_Required__c</fullName>
    <formula>TEXT( Unit__r.Phase__r.Is_Reservation_Form_Required__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reservation Form Required</label>
    <type>Text</type>
</CustomField>