MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_Sales_Checklist_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Checklist_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sales Checklist Completed</label>
    <type>Checkbox</type>
</CustomField>