MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_SPA_Signed_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_SPA_Signed_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SPA Signed (Customer)</label>
    <type>Checkbox</type>
</CustomField>