MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/is_Transferred_SO__c.field-meta.xml
<CustomField>
    <fullName>is_Transferred_SO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Transferred SO</label>
    <type>Checkbox</type>
</CustomField>