MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Is_VAT_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_VAT_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is VAT Selected</label>
    <type>Checkbox</type>
</CustomField>