MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/IsADMCollectedWithWaiverRequest__c.field-meta.xml
<CustomField>
    <fullName>IsADMCollectedWithWaiverRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Waiver Request Submitted, we are considering as ADM Collected, to move further to generate the SPA</description>
    <label>IsADMCollected ( with Waiver Request)</label>
    <type>Checkbox</type>
</CustomField>