MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/IsCommissionLineExist__c.field-meta.xml
<CustomField>
    <fullName>IsCommissionLineExist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCommissionLineExist</label>
    <type>Checkbox</type>
</CustomField>