MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/IsDownPaymentCollected__c.field-meta.xml
<CustomField>
    <fullName>IsDownPaymentCollected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDownPaymentCollected</label>
    <type>Checkbox</type>
</CustomField>