MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/IsExternalCommissionLineExist__c.field-meta.xml
<CustomField>
    <fullName>IsExternalCommissionLineExist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExternalCommissionLineExist</label>
    <type>Checkbox</type>
</CustomField>