MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/IsJO1Exist__c.field-meta.xml
<CustomField>
    <fullName>IsJO1Exist__c</fullName>
    <formula>NOT(ISBLANK( JO1__c ) )</formula>
    <label>Is JO1 Exist</label>
    <type>Checkbox</type>
</CustomField>