MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/IsJO2Exist__c.field-meta.xml
<CustomField>
    <fullName>IsJO2Exist__c</fullName>
    <formula>NOT(ISBLANK( JO2__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is JO2 Exist</label>
    <type>Checkbox</type>
</CustomField>