MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/IsJO3Exist__c.field-meta.xml
<CustomField>
    <fullName>IsJO3Exist__c</fullName>
    <formula>NOT(ISBLANK(JO3__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is JO3 Exist</label>
    <type>Checkbox</type>
</CustomField>