MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/IsPDCSLAExtensionRequired__c.field-meta.xml
<CustomField>
    <fullName>IsPDCSLAExtensionRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPDCSLAExtensionRequired</label>
    <type>Checkbox</type>
</CustomField>