MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccount__c</fullName>
    <formula>CustomerAccount__r.IsPersonAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPersonAccount</label>
    <type>Checkbox</type>
</CustomField>