MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Issuedby__c.field-meta.xml
<CustomField>
    <fullName>Issuedby__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issued by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>