MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/isVirtualAccountExist__c.field-meta.xml
<CustomField>
    <fullName>isVirtualAccountExist__c</fullName>
    <formula>NOT(ISBLANK(  VirtualAccount__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isVirtualAccountExist</label>
    <type>Checkbox</type>
</CustomField>