MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/JO1__c.field-meta.xml
<CustomField>
    <fullName>JO1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JO1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Orders (JO1)</relationshipLabel>
    <relationshipName>JO1</relationshipName>
    <type>Lookup</type>
</CustomField>