MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/JO1Email__c.field-meta.xml
<CustomField>
    <fullName>JO1Email__c</fullName>
    <formula>JO1__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JO1Email</label>
    <type>Text</type>
</CustomField>