MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/JO2__c.field-meta.xml
<CustomField>
    <fullName>JO2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JO2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Orders (JO2)</relationshipLabel>
    <relationshipName>JO_2</relationshipName>
    <type>Lookup</type>
</CustomField>