MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/JO2Email__c.field-meta.xml
<CustomField>
    <fullName>JO2Email__c</fullName>
    <formula>JO2__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JO2Email</label>
    <type>Text</type>
</CustomField>