MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/JO3__c.field-meta.xml
<CustomField>
    <fullName>JO3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JO3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Orders (JO3)</relationshipLabel>
    <relationshipName>JO3</relationshipName>
    <type>Lookup</type>
</CustomField>