MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/JO3_Ownership__c.field-meta.xml
<CustomField>
    <fullName>JO3_Ownership__c</fullName>
    <label>JO3 Ownership %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>