MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/JO3Email__c.field-meta.xml
<CustomField>
    <fullName>JO3Email__c</fullName>
    <formula>BrokerAgency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JO3Email</label>
    <type>Text</type>
</CustomField>