MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/JointOwner_Status__c.field-meta.xml
<CustomField>
    <fullName>JointOwner_Status__c</fullName>
    <label>JointOwner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPA Generated</fullName>
            </value>
            <value>
                <fullName>SPA Sent to customer</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>